@@ -4,7 +4,7 @@
       "Original math code by Mark Biggar, rewritten by Tels L<http://bloodgate.com/>, Tels <nospam-abuse@bloodgate.com>"
    ],
    "dynamic_config" : 1,
-   "generated_by" : "ExtUtils::MakeMaker version 7.0401, CPAN::Meta::Converter version 2.150005",
+   "generated_by" : "ExtUtils::MakeMaker version 7.1, CPAN::Meta::Converter version 2.150005",
    "license" : [
       "perl_5"
    ],
@@ -33,14 +33,14 @@
       },
       "runtime" : {
          "requires" : {
-            "Math::BigInt" : "1.999701",
-            "Math::BigInt::Calc" : "1.999701",
+            "Math::BigInt" : "1.999702",
+            "Math::BigInt::Calc" : "1.999702",
             "XSLoader" : "0",
             "perl" : "5.006"
          }
       }
    },
    "release_status" : "stable",
-   "version" : "0.32",
+   "version" : "0.33",
    "x_serialization_backend" : "JSON::PP version 2.27300"
 }
