@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 7.0401, CPAN::Meta::Converter version 2.150005'
+generated_by: 'ExtUtils::MakeMaker version 7.1, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,9 +19,9 @@ no_index:
     - t
     - inc
 requires:
-  Math::BigInt: '1.999701'
-  Math::BigInt::Calc: '1.999701'
+  Math::BigInt: '1.999702'
+  Math::BigInt::Calc: '1.999702'
   XSLoader: '0'
   perl: '5.006'
-version: '0.32'
+version: '0.33'
 x_serialization_backend: 'CPAN::Meta::YAML version 0.016'
