@@ -14,14 +14,14 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 0fca7e05bd2ff132b9a0ab3a423d6795e5be19c3 CHANGES
+SHA1 7a03019509ff206bbf60e79dcbe2b59eda3b06d5 CHANGES
 SHA1 58d7a00ab2a9f5448a561d49b5a2077efa245ac7 CREDITS
 SHA1 2261acc1a1f1ab8a2907380291dbde2063178aaa FastCalc.xs
 SHA1 c00af0af44a912b550a7e86cd14fbaf0fcc421fc MANIFEST
 SHA1 b84f4d19c93c52aa32e5145cabce4f7e1ccb85a9 MANIFEST.SKIP
-SHA1 a1f60abc47de8050835536057392a7288ca0a93c META.json
-SHA1 bb30ddc63482ed617bcc71e99898e7143a055b04 META.yml
-SHA1 faba8a773348c900a3599954a8f7876da3e9f68e Makefile.PL
+SHA1 3c71b32951f8ba0e3d68acc8f65db6cab96bb3ed META.json
+SHA1 4e743e7f70ca63f976151eba779b9d2f96e58b5b META.yml
+SHA1 0c5a4fc1ceaeedab022fe824541f901e904507a9 Makefile.PL
 SHA1 a1e38089425d81c98d94604ac652fd3ef775cdee README
 SHA1 280c4f82fc9e7322fe2bbed7e5f595bfe9fe7783 TODO
 SHA1 bce3c51bb369419603298064b78e14077b93af66 inc/Module/Install.pm
@@ -32,16 +32,16 @@ SHA1 76efdca3603159e0ae0e18f19fe72a0211a69529 inc/Module/Install/Makefile.pm
 SHA1 2e33e87882d60db3913da6284dd5295e5315e18a inc/Module/Install/Metadata.pm
 SHA1 c830b819e61bda5eca077c6291293bba61b3b9f2 inc/Module/Install/Win32.pm
 SHA1 cb52b9d6f88d512d448a6f35ed0af0d1201a134b inc/Module/Install/WriteAll.pm
-SHA1 ce799849b39f42e0c6d0c01f725a3ddfcec318fb lib/Math/BigInt/FastCalc.pm
+SHA1 b1f7d00422dde82c578f0f8630bdab9a7f2b6738 lib/Math/BigInt/FastCalc.pm
 SHA1 385cc7ed3bf3e6290640b9880445ca9a3dea629e t/00sig.t
 SHA1 2c720454ea4a111cb2e554a869e66234fafb40a8 t/01load.t
 SHA1 b2ed9206ca5b69ec3b8bbf850bf4b6dfde518e7e t/02pod.t
 SHA1 ae4a4efc6c33e300fb247439451ca2f43ca14014 t/03podcov.t
-SHA1 d0a7c7c8852762abd7f962d26d72f2f8956f946d t/bigfltpm.inc
-SHA1 35dca58157ec13507a7b98be31717862d2741712 t/bigfltpm.t
+SHA1 c0b1506e1f038c821054aa3227992a89157f0247 t/bigfltpm.inc
+SHA1 0070e90061ff79ba837111e94abecb15f7ebf41a t/bigfltpm.t
 SHA1 67d03610a42a11a2d8f73358441a8fab18b12103 t/bigintfc.t
-SHA1 9fcc5a0c645880be1dc2083dc623de14f6b476d9 t/bigintpm.inc
-SHA1 775499b6bf305c6d39489a0faf640aa46295355c t/bigintpm.t
+SHA1 b8cde514da83ae61fd7ac844046324f50800f724 t/bigintpm.inc
+SHA1 b49f7fa46114bde2154b086175ca2659b0a2c326 t/bigintpm.t
 SHA1 9914c24f7ac04c96490e0f43e9c8a3f12b565610 t/bootstrap.t
 SHA1 38bf0f7b9949bf4eb746831ecde91841f0118931 t/leak.t
 SHA1 41bbc8a406b4685c932fd36f20b085ea2f04faf1 t/mbi_rand.t
@@ -50,11 +50,11 @@ SHA1 c928400143b454a3a2327f138558ab28f51901a4 t/mbimbf.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJV8xaiAAoJEGcmPl2fr166socH/iwYJQWPW7fZKuNbB2EHQrRj
-2OMqcZ6R6vYwE46ftkK+06tbYq4rZI9IcAq/nEn1wrsTUPXH7PpJWBZsSs+h/OKK
-iucNME4EFTHQ5tT6pnbFcjtofErERKTtKD+vDsCFgXOV8Q93sjUXoL+sJA7ABuSO
-ljMBv7ktyEhZK6Lz6VrjAaP+Y8aCdbd5P1udg9YOkWfYClXuvbCdECyGAv2kjWCf
-6gz36dF8fqQR/72Lr1yqsDaNLpKiTMJSrzeaJdTwHRR/HFGFrgSQkgrdKeaTfvs1
-sF+OHduvxUjbnuUvCIso6BzQ7X0w7I/wZnEElwA0q8/hkhIiZSBhUG69df5BDjc=
-=/eyP
+iQEcBAEBAgAGBQJV+sgNAAoJEGcmPl2fr166WoYIALU8dP71iG4pywI+H6i41uw0
+XFcYUhcC7pOmIbkyBKrtHlJTrM2CpNesJMpW1drXeNu4+UshKPfYPtaqCUAkxcW1
+Gp9czoWlVFj9HCUJEp/IohcROIjav7N99Zni7BluJamE74SsvyJpABpftnBUx+QT
+4ZOBV9L4iHmH0ENIA6mN5jkGMUJPKM0MTBDZCX/vu6A2ioAwD+RCD4W7Czslw4sG
+NZn+y/dYKSib/ZbvRoxUIBDT9drHR45sjH1iEhtECvLppVOXPCvV843wRW5qieDn
+xZoLhYJ82TkA871SR5Zy/+2r90/AYx/dQpIiXvzVJSiIYoWldY00/44A9SUQS8s=
+=5J8H
 -----END PGP SIGNATURE-----
