@@ -1,5 +1,9 @@
 Revision history for Perl extension Math::BigInt::FastCalc.
 
+2015-09-17 v0.33 pjacklam
+  * Sync test files with Math-BigInt-1.999702.
+  * Required version of Math-BigInt is now 1.999702.
+
 2015-09-11 0.32 pjacklam
  CHANGES
   * Add changes from version 0.30 to 0.31.
